--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
 
 
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="/images/imran2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h3>Dream Big</h3>
+            <h3>Dream become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima, voluptatum! Illo, neque. Corporis
+                natus, deleniti nesciunt officia neque ea delectus eligendi velit sint nostrum nemo magnam cupiditate
+                quas non quos ab commodi dicta? Praesentium temporibus minima laudantium libero tempore quaerat
+                quibusdam quos perspiciatis rerum aut ad sunt pariatur, blanditiis quis.</p>
+
+            <a class="hire-me" href="http://" target="_blank" rel="noopener noreferrer">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
