--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner display-flex">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange">Imran sheikh</span> World!</h1>
@@ -32,7 +32,7 @@
 
 
     </section>
-    <section class="dream-area">
+    <section class="dream-area display-flex">
         <div class="half-width">
             <img src="/images/imran2.png" alt="">
         </div>
@@ -47,6 +47,37 @@
             <a class="hire-me" href="http://" target="_blank" rel="noopener noreferrer">Download Resume</a>
         </div>
     </section>
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="display-flex">
+            <div id="web-dev-border" class="experience-item">
+                <h2>Full Stack Web Developer</h1>
+                    <h3 class="orange">2021-Present | Pro Level Developer</h3>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                        efficient. I didn't
+                        stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even
+                        know
+                        the
+                        deployment,
+                        server and security. I will give you 100% web solution.</p>
+            </div>
+
+            <div id="web-dev-one" class="experience-item">
+                <h2>Baby Web Developer</h1>
+                    <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+                    <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                        showed
+                        it to them.
+                        They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>All right resived by Imran</p>
+    </footer>
 </body>
 
 </html>
