--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             <a class="hire-me" href="https://www.linkedin.com/in/md-emran/" target="_blank">Hire me</a>
         </div>
         <div class="half-width">
-            <img src="/images/imran.png" alt="imran sheikh pic">
+            <img src="images/imran.png" alt="imran sheikh pic">
         </div>
 
 
     </section>
     <section class="dream-area display-flex">
         <div class="half-width">
-            <img src="/images/imran2.png" alt="">
+            <img src="images/imran2.png" alt="">
         </div>
         <div class="half-width">
             <h3>Dream Big</h3>
